# svencoop-metamod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  lp_configuration.json  metamod.sln
ascurl/: ascurl.vcxproj
asext/: dllapi.cpp
aslp/: CMakeLists.txt  Config.mak  aslp.cpp  aslp.filters  aslp.vcxproj  dllapi.cpp  engine_api.cpp  meta_api.cpp  server_hook.cpp
fallguys/: engine_api.cpp
scripts/: build-all-vs2019.bat  build-all-x86-Release.bat  build-bullet3-dbg.linux_i386.sh  build-bullet3-opt.linux_i386.sh  build-bullet3-x86-Debug.bat  build-bullet3-x86-Release.bat  build-capstone-dbg.linux_i386.sh  build-capstone-opt.linux_i386.sh  build-capstone-x86-Debug.bat  build-capstone-x86-Release.bat  build-metamod-cmake-x86-Release-2019.bat
src/: CBasePlugin.cpp  CBasePlugin.h  CConfigContext.cpp  CConfigContext.hpp  CPluginManager.cpp  main.cpp  main.hpp  meta_api.cpp  placeholder.h
src/plugins/: anticlip.cpp
test/: main.cpp  test.bat  test.json
